@startuml 

class SapData
class Configuration
class AttributeFile
class FileAttribute
class FileAttributeParser


class SapDataViewModel
class AttributeFileViewModel

class CopyCommand
class ArchiveCommand
class PrepareCommand
class FileOpenCommand

App ..> MainViewModel : create >
App ..> ArchiveView : create >
App ..> Configuration : create >
App ..> SapData: create >

ArchiveView .-> MainViewModel
CopyCommand <|-- ArchiveCommand
CopyCommand <|-- PrepareCommand
ArchiveCommand --o MainViewModel
PrepareCommand --o MainViewModel
FileOpenCommand --o MainViewModel
FileOpenCommand ---> AttributeFile

AttributeFileViewModel o--> AttributeFile
AttributeFile o--> FileAttribute
AttributeFile ..> FileAttributeParser : use >
FileAttributeParser .> FileAttribute : create >

SapDataViewModel o--> SapData
ConfigurationViewModel o--> Configuration

MainViewModel o--> SapDataViewModel
MainViewModel o--> ConfigurationViewModel
MainViewModel o--> AttributeFileViewModel

@enduml
